# cheesechain

./: .env.dist  README.md  pyproject.toml
cheesechain/: __main__.py  bot.py  config.py
cheesechain/features/: __init__.py  markov.py
